wrap issue fixed

--- a/css/app.css
+++ b/css/app.css
@@ -558,14 +558,14 @@ input[type='range']:focus::-ms-fill-upper {
     grid-column: 1/4;
     grid-row: 1/2;
     flex-direction: row;
+    flex-wrap: nowrap;
   }
   .box-1 {
     flex-direction: column;
     justify-content: space-between;
     flex-basis: 30%;
   }
-  
-  
+
   .box-2 {
     flex-basis: 40%;
     align-items: center;
